# ProcessadorReunions

./: .env copy  .gitignore  CLAUDE.md  INICI_UV.md  LlançaApp.command  README.md  pyproject.toml  requirements.txt
src/: acta_reunio.txt  calendar_matcher.py  daily_processor.py  gmail_fetcher.py  meeting_analyzer.py  obsidian_writer.py  reunio_interactiva.py  semantic_context_retriever.py  semantic_memory_builder.py  semantic_models.py  transcribe_test_2.py  transcript_corrector.py  vocabulary_loader.py
src/gui/: app.py  main_window.py  wizard_correccio.py  wizard_correus.py  wizard_fitxers.py  wizard_nou_projecte.py  wizard_processar.py  wizard_processar_correus.py  wizard_transcripcio.py  workers.py
src/gui/widgets/: correction_checklist.py  inline_correction_editor.py  transcript_editor.py
